--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "WearableElectronicsFactory",
+  "name": "wearable-electronics-factory",
   "version": "1.0.0",
   "scripts": {
     "start": "blitz start",
     "studio": "blitz prisma studio",
     "build": "blitz build",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "lint:fix": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx --fix .",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -31,16 +32,21 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/icons": "1.0.5",
+    "@chakra-ui/react": "1.3.2",
+    "@emotion/react": "11.1.5",
+    "@emotion/styled": "11.1.5",
     "@prisma/cli": "~2.14",
     "@prisma/client": "~2.14",
     "blitz": "0.29.7",
+    "final-form": "4.20.1",
+    "framer-motion": "3.3.0",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "3.1.0",
+    "react-final-form": "6.5.2",
     "typescript": "4.1.3",
-    "zod": "1.11.11",
-    "final-form": "4.20.1",
-    "react-final-form": "6.5.2"
+    "zod": "1.11.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.9",
@@ -62,10 +68,10 @@
     "jest": "26.6.3",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-watch-typeahead": "0.6.1",
-    "react-test-renderer": "17.0.1",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
+    "react-test-renderer": "17.0.1",
     "ts-jest": "26.5.0"
   },
   "private": true
