--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "@chakra-ui/react": "1.3.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "@fortawesome/fontawesome-svg-core": "1.2.34",
+    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@fortawesome/react-fontawesome": "0.1.14",
     "@prisma/cli": "~2.14",
     "@prisma/client": "~2.14",
     "blitz": "0.29.7",
