Add image field to design form

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "blitz": "0.29.7",
     "final-form": "4.20.1",
     "framer-motion": "3.3.0",
+    "multer": "1.4.2",
+    "next-connect": "0.9.1",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "3.1.0",
