--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "start": "blitz start",
     "studio": "blitz prisma studio",
     "build": "blitz build",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
-    "lint:fix": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx --fix .",
+    "lint": "xo",
+    "lint:fix": "xo --fix",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -16,10 +16,6 @@
   "prisma": {
     "schema": "db/schema.prisma"
   },
-  "prettier": {
-    "semi": false,
-    "printWidth": 100
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged && pretty-quick --staged",
@@ -28,7 +24,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "eslint --fix"
+      "xo --fix"
     ]
   },
   "dependencies": {
@@ -45,6 +41,7 @@
     "final-form": "4.20.1",
     "framer-motion": "3.3.0",
     "multer": "1.4.2",
+    "next": "10.0.6",
     "next-connect": "0.9.1",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
@@ -59,16 +56,26 @@
     "@testing-library/react-hooks": "3.7.0",
     "@types/jest": "26.0.20",
     "@types/react": "17.0.1",
-    "@typescript-eslint/eslint-plugin": "4.14.2",
-    "@typescript-eslint/parser": "4.14.2",
+    "@typescript-eslint/eslint-plugin": "4.15.0",
+    "@typescript-eslint/parser": "4.15.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.19.0",
+    "dotenv-flow": "3.2.0",
+    "eslint": "7.20.0",
     "eslint-config-react-app": "6.0.0",
+    "eslint-config-xo": "0.34.0",
+    "eslint-config-xo-react": "0.23.0",
+    "eslint-config-xo-typescript": "0.37.0",
+    "eslint-plugin-ava": "11.0.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-flowtype": "5.2.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-no-use-extend-native": "0.5.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-unicorn": "28.0.0",
     "husky": "4.3.8",
     "jest": "26.6.3",
     "jest-environment-jsdom-fourteen": "1.0.1",
@@ -76,8 +83,18 @@
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
+    "react-query": "3.9.6",
     "react-test-renderer": "17.0.1",
-    "ts-jest": "26.5.0"
+    "ts-jest": "26.5.0",
+    "type-fest": "0.21.0",
+    "xo": "0.37.1"
+  },
+  "xo": {
+    "rules": {
+      "unicorn/filename-case": "off",
+      "import/no-mutable-exports": "off",
+      "no-alert": "off"
+    }
   },
   "private": true
 }
