--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wearable-electronics-factory",
   "version": "1.0.0",
   "scripts": {
+    "dev": "blitz dev",
     "start": "blitz start",
     "studio": "blitz prisma studio",
     "build": "blitz build",
@@ -37,11 +38,10 @@
     "@fortawesome/react-fontawesome": "0.1.14",
     "@prisma/cli": "~2.14",
     "@prisma/client": "~2.14",
-    "blitz": "0.29.7",
+    "blitz": "0.30.0",
     "final-form": "4.20.1",
     "framer-motion": "3.3.0",
     "multer": "1.4.2",
-    "next": "10.0.6",
     "next-connect": "0.9.1",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
