--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "xo",
     "lint:fix": "xo --fix",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "migrations:generate": "prisma migrate dev --preview-feature",
+    "migrations:run": "prisma migrate deploy --preview-feature"
   },
   "browserslist": [
     "defaults"
@@ -19,7 +21,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && pretty-quick --staged",
+      "pre-commit": "lint-staged",
       "pre-push": "tsc && npm run lint && npm run test"
     }
   },
@@ -29,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "@blitzjs/server": "0.30.0",
     "@chakra-ui/icons": "1.0.5",
     "@chakra-ui/react": "1.3.2",
     "@emotion/react": "11.1.5",
