--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@prisma/cli": "~2.14",
     "@prisma/client": "~2.14",
     "blitz": "0.30.0",
+    "execa": "5.0.0",
     "final-form": "4.20.1",
     "framer-motion": "3.3.0",
     "multer": "1.4.2",
+    "nanoid": "3.1.20",
     "next-connect": "0.9.1",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
@@ -58,6 +60,7 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/react-hooks": "3.7.0",
     "@types/jest": "26.0.20",
+    "@types/node": "14.14.31",
     "@types/react": "17.0.1",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
@@ -96,7 +99,8 @@
     "rules": {
       "unicorn/filename-case": "off",
       "import/no-mutable-exports": "off",
-      "no-alert": "off"
+      "no-alert": "off",
+      "import/no-extraneous-dependencies": "off"
     }
   },
   "private": true
