--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # This env file should be checked into source control
 # This is the place for default values that should be used in all environments
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+DATABASE_URL=
+UPLOAD_DIR=
