--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "blitz start",
     "studio": "blitz prisma studio",
     "build": "blitz build",
+    "build:analyze": "ANALYZE=true blitz build",
     "lint": "xo",
     "lint:fix": "xo --fix",
     "test": "jest",
@@ -31,33 +32,32 @@
     ]
   },
   "dependencies": {
-    "@blitzjs/server": "0.30.0",
-    "@chakra-ui/icons": "1.0.5",
-    "@chakra-ui/react": "1.3.2",
+    "@chakra-ui/icons": "1.0.7",
+    "@chakra-ui/react": "1.4.1",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
-    "@fortawesome/fontawesome-svg-core": "1.2.34",
-    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@fortawesome/fontawesome-svg-core": "1.2.35",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
-    "@prisma/cli": "~2.14",
-    "@prisma/client": "~2.14",
+    "@prisma/client": "~2.19.0",
     "@types/archiver": "5.1.0",
-    "archiver": "5.2.0",
-    "blitz": "0.30.0",
+    "archiver": "5.3.0",
+    "blitz": "0.33.0",
     "execa": "5.0.0",
-    "final-form": "4.20.1",
+    "final-form": "4.20.2",
     "framer-motion": "3.3.0",
     "multer": "1.4.2",
-    "nanoid": "3.1.20",
+    "nanoid": "3.1.22",
     "next-connect": "0.9.1",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
-    "react-error-boundary": "3.1.0",
-    "react-final-form": "6.5.2",
-    "typescript": "4.1.3",
-    "zod": "1.11.11"
+    "react-error-boundary": "3.1.1",
+    "react-final-form": "6.5.3",
+    "zod": "1.11.13",
+    "prisma": "2.19.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "10.0.9",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/react-hooks": "3.7.0",
@@ -93,9 +93,11 @@
     "pretty-quick": "3.1.0",
     "react-query": "3.9.6",
     "react-test-renderer": "17.0.1",
-    "ts-jest": "26.5.0",
+    "ts-jest": "26.5.4",
     "type-fest": "0.21.0",
-    "xo": "0.37.1"
+    "webpack": "4.44.2",
+    "xo": "0.37.1",
+    "typescript": "~4.1"
   },
   "xo": {
     "rules": {
