--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
-    "@prisma/client": "~2.19.0",
+    "@prisma/client": "2.21.2",
     "@types/archiver": "5.1.0",
     "archiver": "5.3.0",
     "blitz": "0.33.0",
@@ -49,12 +49,12 @@
     "multer": "1.4.2",
     "nanoid": "3.1.22",
     "next-connect": "0.9.1",
+    "prisma": "2.21.2",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "3.1.1",
     "react-final-form": "6.5.3",
-    "zod": "1.11.13",
-    "prisma": "2.19.0"
+    "zod": "1.11.13"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.9",
@@ -94,9 +94,9 @@
     "react-test-renderer": "17.0.1",
     "ts-jest": "26.5.4",
     "type-fest": "0.21.0",
+    "typescript": "~4.1",
     "webpack": "4.44.2",
-    "xo": "0.37.1",
-    "typescript": "~4.1"
+    "xo": "0.37.1"
   },
   "xo": {
     "rules": {
