--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@prisma/client": "2.21.2",
     "@types/archiver": "5.1.0",
     "archiver": "5.3.0",
-    "blitz": "0.33.0",
+    "blitz": "0.34.3",
     "execa": "5.0.0",
     "final-form": "4.20.2",
     "framer-motion": "3.3.0",
@@ -54,6 +54,7 @@
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "3.1.1",
     "react-final-form": "6.5.3",
+    "react-gravatar": "2.6.3",
     "zod": "1.11.13"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/jest": "26.0.20",
     "@types/node": "14.14.31",
     "@types/react": "17.0.1",
+    "@types/react-gravatar": "2.6.8",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
     "babel-eslint": "10.1.0",
