Better modeling of design files

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@prisma/client": "2.21.2",
     "@types/archiver": "5.1.0",
     "archiver": "5.3.0",
+    "arr-diff": "4.0.0",
     "blitz": "0.34.3",
     "execa": "5.0.0",
     "final-form": "4.20.2",
@@ -61,7 +62,9 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/react-hooks": "3.7.0",
+    "@types/arr-diff": "4.0.0",
     "@types/jest": "26.0.20",
+    "@types/multer": "1.4.5",
     "@types/node": "14.14.31",
     "@types/react": "17.0.1",
     "@types/react-gravatar": "2.6.8",
