Add password reset support

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "multer": "1.4.2",
     "nanoid": "3.1.22",
     "next-connect": "0.9.1",
+    "nodemailer": "6.5.0",
     "prisma": "2.21.2",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
@@ -66,6 +67,7 @@
     "@types/jest": "26.0.20",
     "@types/multer": "1.4.5",
     "@types/node": "14.14.31",
+    "@types/nodemailer": "6.4.1",
     "@types/react": "17.0.1",
     "@types/react-gravatar": "2.6.8",
     "@typescript-eslint/eslint-plugin": "4.15.0",
