--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
     "@prisma/client": "2.21.2",
+    "@stripe/stripe-js": "1.14.0",
     "@types/archiver": "5.1.0",
     "archiver": "5.3.0",
     "arr-diff": "4.0.0",
@@ -53,10 +54,12 @@
     "nodemailer": "6.5.0",
     "prisma": "2.21.2",
     "react": "0.0.0-experimental-3310209d0",
+    "react-confetti": "6.0.1",
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "3.1.1",
     "react-final-form": "6.5.3",
     "react-gravatar": "2.6.3",
+    "stripe": "8.145.0",
     "zod": "1.11.13"
   },
   "devDependencies": {
